=================
Changes for Crate
=================

Unreleased
==========

 - Fix: Querying from information_schema while a table is created could
   cause an error

 - Fixed a NPE that was thrown if a SELECT statement contained `_score` in the
   result columns and an ORDER BY clause.

 - Fix: selecting error from sys.jobs_log caused a NPE in some cases

 - Fix: load Crate plugins only once on node start

 - Fixed an issue that caused nodes fail to start if `node.client` was set to true.

 - Fix: Fixed a bug where some searchers were not properly closed

 - Fixed a race condition that could cause `DROP TABLE IF EXISTS` to fail if
   the table was concurrently dropped.

 - Fixed a race condition in `ALTER TABLE <partitioned_table>` that could occur
   if a `DELETE FROM <partitioned_table>` was invoked immediately before the
    `ALTER TABLE` statement.

2015/06/16 0.49.3
=================

 - Fixed an issue where ``_raw`` and ``_doc`` in primary key queries
   returned ``NULL``

 - Updated crash to 0.13.0 which includes following changes:

    - Added `dynamic` as output format option

    - Added ``--version`` to cli interface to show crash version and exit

    - Display command help in case the command is not used correctly

    - Display NULL values in mixed mode correctly

    - Fixed broken 'mixed' output style due to overriding import

    - Improved readability of sql syntax highlighting

    - Attempting to use unknown command now results in an error

 - Fix: return correct status for ``GET`` requests on ``/`` REST endpoint
   when cluster is starting up

 - Fixed a race condition that could cause a `CREATE TABLE` statement
   immediately after a `DROP TABLE` statement to fail.

 - Fixed a minor memory leak that occurred if custom schemas were deleted.

 - Fixed incorrect comparison in query by IP type

 - Fix: make sure sys.nodes expressions that utilize os/process/network/jvm
   services use the same stats probe per row; previously values derived from